# languagetool-rust

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  RELEASE-PROCESS.md  cliff.toml  docker-compose.yml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature_request.yml  support.yml
.github/workflows/: CI.yml  changelog.yml  cliff.yml  coverage.yml  dockertests.yml  languagetool.yml  lint.yml  mardownlint.yml  msrv.yml  publish.yml  release.yml  rustbench.yml  rustcheck.yml  rustclippy.yml  rustdoc.yml  rustfmt.yml  rustlib.yml  rustlints.yml  rustmsrv.yml
benches/: bench_main.rs  large.txt  medium.txt  small.txt
benches/benchmarks/: check_texts.rs  mod.rs
src/: bin.rs  check.rs  cli.rs  docker.rs  error.rs  lib.rs  main.rs  parsers.rs
src/api/: check.rs  languages.rs  mod.rs  server.rs  words.rs
src/api/check/: data_annotations.rs  mod.rs  requests.rs  responses.rs
src/api/words/: add.rs  delete.rs  mod.rs
src/cli/: check.rs  completions.rs  docker.rs  languages.rs  mod.rs  ping.rs  words.rs
src/lib/: check.rs  cli.rs  docker.rs  error.rs  languages.rs  lib.rs  server.rs  words.rs
src/parsers/: html.rs  markdown.rs  mod.rs  typst.rs
tests/: cli.rs  match_positions.rs
tests/sample_files/: example.html  example.typ
tests/snapshots/: cli__autodetect_html_file.snap  cli__autodetect_markdown_file.snap  cli__autodetect_markdown_file_contributing.snap  cli__autodetect_typst_file.snap
