[[bench]]
harness = false
name = "bench_main"
path = "benches/bench_main.rs"

[[bin]]
name = "ltrs"
path = "src/bin.rs"
required-features = ["cli"]

[dependencies]
annotate-snippets = {version = "^0.9.1", optional = true}
clap = {version = "^4.0", features = ["cargo", "derive", "env", "wrap_help"], optional = true}
clap_complete = {version = "^4.0", optional = true}
is-terminal = {version = "0.4.3", optional = true}
reqwest = {version = "^0.11", default-features = false, features = ["json"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
termcolor = {version = "1.2.0", optional = true}
thiserror = "^1.0"
tokio = {version = "^1.0", features = ["macros", "rt-multi-thread"], optional = true}

[dev-dependencies]
assert_cmd = "2.0.11"
codspeed-criterion-compat = "2.7.0"
criterion = "0.5"
futures = "0.3"
predicates = "3.0.3"
tempfile = "3.5.0"
tokio = {version = "^1.0", features = ["macros"]}

[features]
annotate = ["dep:annotate-snippets"]
cli = ["annotate", "color", "dep:clap", "dep:is-terminal", "multithreaded"]
cli-complete = ["cli", "clap_complete"]
color = ["annotate-snippets?/color", "dep:termcolor"]
default = ["cli", "native-tls"]
docker = []
full = ["cli-complete", "docker", "unstable"]
multithreaded = ["dep:tokio"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
unstable = []

[lib]
name = "languagetool_rust"
path = "src/lib/lib.rs"

[package]
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
description = "LanguageTool API bindings in Rust."
edition = "2021"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]
keywords = ["languagetool", "rust"]
license = "MIT"
name = "languagetool-rust"
readme = "README.md"
repository = "https://github.com/jeertmans/languagetool-rust"
rust-version = "1.74.0"
version = "2.1.5"

[package.metadata.release]
pre-release-replacements = [
    {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
    {file="CHANGELOG.md", search="\\.\\.\\.HEAD\\)", replace="...{{version}}) {{date}}", exactly=1},
    {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased](https://github.com/jeertmans/languagetool-rust/compare/v{{version}}...HEAD)", exactly=1},
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "cli"
path = "tests/cli.rs"
required-features = ["cli"]

[[test]]
name = "match-positions"
path = "tests/match_positions.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
